--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Web Designer</h2>
         </div>
         <div class="pic">
-            <img src="images/sumu.jfif" height="600px" width="450px">
+            <img src="images/gulu.png" height="600px" width="450px">
         </div>
         <div class="span">
             <span class="span1">4+</span><br>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="ab2">
-            <img src="images/muru.jfif">
+            <img src="images/taba.png">
             </div>
         </div>
     </div>
